# songdo-traffic

./: .gitignore  .gitmodules  LICENSE  README.md  config.yaml  config_bgcp.yaml  config_filtered.yaml  config_knn.yaml  config_mice.yaml  config_subset.yaml  eda.ipynb  install_libs.py  pyproject.toml  requirements.in  requirements.txt  songdo-traffic.code-workspace
notebooks/: colab.ipynb  eda.ipynb  eda_adj.ipynb  eda_new.ipynb  eda_rnn.ipynb  metr_test.ipynb  pyproject.toml  rnn.ipynb  rnn_eda.ipynb  rnn_outliers.ipynb  rnn_prediction.ipynb  selected_data_eda.ipynb  small_dataset.ipynb  subset-192.ipynb  subset-268.ipynb  subset-all.ipynb  test_agcrn.ipynb  test_dcrnn.ipynb  test_lstm.ipynb  test_mlcaformer.ipynb  test_stgcn.ipynb  training.ipynb
project_om/: pyproject.toml
project_om/src/ppom/: __init__.py  __main__.py  missing_processor.py  outlier_processor.py  prediction_test.py  preprocessor.py  simple_replacement_test.py  utils.py
project_om/src/ppom/lightning/: dataset.py
project_om/src/ppom/lightning/model/: rnn.py
songdo_arima/: README.md  pyproject.toml
songdo_arima/configs/: config.yaml
songdo_arima/src/songdo_arima/: __main__.py  plots.py  sarimax_training.py  seasonal_analysis.py  simple_training.py  test.py  utils.py
songdo_arima/tests/: conftest.py  test_check_result.py  test_result.py  test_seasonal_analysis.py  test_test_arima.py  test_training_arima.py
songdo_arima/tests/test_training_length/: README.md  test_missing_outlier.py  test_training_dates.py  test_training_simple.py  test_training_weeks.py  test_visualize.py
songdo_llm/: .gitignore  README.md  pyproject.toml
songdo_llm/src/prediction_simple/: __main__.py
songdo_llm/src/songdo_llm/: __init__.py  __main__.py  dataset.py
songdo_llm/src/songdo_llm/model/: lightning.py
songdo_llm/src/songdo_llm/model/base/: llm.py  rnn.py
songdo_llm/src/songdo_llm/model/lightning/: llm_prediction.py  simple_prediction.py  traffic_prediction.py
songdo_llm/tests/: test_dataset.py  test_llm_model.py  test_simple_prediction.py
songdo_metr/: CLAUDE.md  README.md  config.yaml  install_libs.py  pyproject.toml  requirements.txt
songdo_metr/src/metr/: __init__.py  __main__.py  dataloader.py  datasets.py  pems_pipeline.py  pipeline.py  subset.py  utils.py
songdo_metr/src/metr/components/: __init__.py  adj_mx.py  distance_imc.py  graph_sensor_locations.py  metadata.py  metr_ids.py
songdo_metr/src/metr/components/metr_imc/: interpolation.py  outlier.py  traffic_data.py
songdo_metr/src/metr/dataset/: __init__.py  __main__.py  interpolator.py
songdo_metr/src/metr/dataset/imcrts/: __init__.py  __main__.py  collector.py
songdo_metr/src/metr/dataset/metr_imc/: __init__.py  __main__.py  base.py  generator.py
songdo_metr/src/metr/dataset/nodelink/: __init__.py  __main__.py  converter.py  downloader.py
songdo_metr/src/metr/datasets/: __init__.py  rnn.py
songdo_metr/src/metr/datasets/agcrn/: __init__.py  dataloader.py  datamodule.py  dataset.py
songdo_metr/src/metr/datasets/dcrnn/: __init__.py  dataloader.py  datamodule.py  dataset.py
songdo_metr/src/metr/datasets/mlcaformer/: __init__.py  dataloader.py  (+2 more)
songdo_metr/src/metr/imcrts/: collector.py
songdo_metr/src/metr/nodelink/: converter.py  downloader.py
songdo_metr/src/metr/processors/: __init__.py  missing.py  outlier.py  raw.py  subset.py
songdo_metr/src/metr_val/: __init__.py  __main__.py  model.py  models.py  rnn.py  test_performance.py  utils.py
songdo_metr/src/metr_val/models/: rnn.py
songdo_metr/tests/: conftest.py  test_compare.py  test_dataset_samples.py  test_metadata_generation.py  test_metr_imc.py  test_raw.py  test_subset_generation.py
songdo_metr/tests/missings/: config.yaml  conftest.py  test_interpolation.py
songdo_metr/tests/missings/joint/: test_joint_interpolation.py
songdo_metr/tests/outliers/: config.yaml  conftest.py  test_outlier_generation.py  test_pretest.py  test_verification.py
songdo_metr/tests/raw_generation/: config.yaml  conftest.py  test_data_generation.py  test_split.py
songdo_metr/tests/test_metr/: test_analyze_dataset.py  test_detailed_analysis.py  test_nodelink_imcrts_samples.py
songdo_rnn/: .gitignore  README.md  pyproject.toml
songdo_rnn/lightning_logs/version_0/: hparams.yaml  metrics.csv
songdo_rnn/lightning_logs/version_0/checkpoints/: epoch=0-step=64.ckpt
songdo_rnn/src/songdo_rnn/: __main__.py  dataset.py  main.py  model.py  plot.py  test.py  train.py  utils.py
songdo_rnn/src/songdo_rnn/experiments/: best_interpolation_search.py  prediction_evaluation.py  seq_comparison.py
songdo_rnn/src/songdo_rnn/preprocessing/: missing.py  outlier.py  sync.py
songdo_rnn/tests/: test_data_validation.py  test_visualize_by_sensor.py
songdo_rnn/tests/legacy/: conftest.py  test_interpolation_visualization.py  test_outlier_visualization.py  test_standalone_interpolation.py
songdo_rnn/tests/results/: test_predictions.py
songdo_rnn/tests/results/preprocessing/: test_preprocessing.py
songdo_stgcn_wave/: .gitignore  README.md  main.py  pyproject.toml  scripts
songdo_stgcn_wave/configs/: base.yaml  imc-base.yaml  imc-subset-268-base.yaml  metr-1.yaml  metr-2.yaml  metr-3.yaml  metr-4.yaml
songdo_stgcn_wave/src/: install.py
songdo_stgcn_wave/src/songdo_stgcn_trainer/: test.py  training.py
songdo_stgcn_wave/src/songdo_stgcn_wave/: __main__.py  test.py  training.py  utils.py
songdo_stgcn_wave/src/songdo_trainer/: __init__.py  test.py  training.py
songdo_stgcn_wave/src/stgcn_wave/: main.py
songdo_stgcn_wave/tests/: test_metr_dataset.py
traffic_imc/: .gitignore  CLAUDE.md  README.md  pyproject.toml
traffic_imc/scripts/: post_update.py
traffic_imc/src/metr_val/: __init__.py  __main__.py  agcrn.py  data.py  dcrnn.py  main.py  mlcaformer.py  rnn.py  stgcn.py  tassgn.py  test_performance.py  utils.py
traffic_imc/src/metr_val/analysis/: ANALYSIS_GUIDE.md  README.md  __init__.py  __main__.py  config.yaml  error_analysis.py  pipeline.py  prediction_comparison.py  training_diagnostics.py  utils.py  visualization_analysis.py
traffic_imc/src/metr_val/models/: rnn.py
(+134 files in other folders)
