[project]
name = "songdo_metr"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "sbyim", email = "ysb06@hotmail.com"},
]
dependencies = [
    "geopandas>=1.0.1",
    "pyyaml>=6.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "tqdm>=4.66.5",
    "shapely>=2.0.6",
    "networkx>=3.4.2",
    "requests>=2.32.3",
    "torch>=2.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
    "seaborn>=0.13.2",
]
