[project]
name = "songdo_metr"
version = "0.1.3"
description = "Default template for PDM package"
authors = [
    {name = "sbyim", email = "ysb06@hotmail.com"},
]
dependencies = [
    "geopandas>=1.0.1",
    "pyyaml>=6.0.2",
    "pandas>=2",
    "scikit-learn>=1.5.2",
    "numpy<2",
    "scipy>=1.7",
    "tqdm>=4.66.5",
    "shapely>=2.0.6",
    "networkx>=3.4",
    "requests>=2.32.3",
    "torch==2.8.0",
    # "torch==2.8.0+cu128",
    "tables>=3.10.1",
    "lightning>=2.5.1",
    "holidays>=0.74",
    "openpyxl>=3.1.5",
    "pypots>=1.1",
    "torch-spatiotemporal>=0.9.5",
    "torch-geometric>=2.7.0",
    "torch-sparse>=0.6.18",
    "torch-scatter>=2.1.2",
    # "torch-sparse==0.6.18+pt28cu128",
    # "torch-scatter==2.1.2+pt28cu128",
    "torchmetrics==0.11.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.uv.extra-build-dependencies]
torch-sparse = ["torch"]
torch-scatter = ["torch"]

[tool.pdm.build]
requires = ["torch"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
    "seaborn>=0.13.2",
]

# [[tool.pdm.source]]
# type = "find_links"
# url = "https://data.pyg.org/whl/torch-2.8.0+cu128.html"
# name = "pyg"