[project]
name = "songdo_rnn"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Seungbin Yim", email = "ysb06@hotmail.com"},
]
dependencies = ["torch>=2.5.1", "scikit-learn>=1.6.0", "seaborn>=0.13.2", "lightning>=2.5.0.post0", "tensorboard>=2.18.0", "openpyxl>=3.1.5", "wandb>=0.19.2"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "songdo-metr @ file:///${PROJECT_ROOT}/../songdo_metr",
]
test = [
    "pytest>=8.3.4",
]
