[project]
name = "songdo_stgcn_wave"
version = "0.1.1"
description = "Default template for PDM package"
authors = [{ name = "Seungbin Yim", email = "ysb06@hotmail.com" }]
dependencies = [
    "pyyaml>=6.0.1",
    "numpy<2",
    "wandb>=0.17.5",
    "pandas>=2.2.2",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.1",
    "setuptools==58.3.0",
    "pydantic>=2.8.2",
    "tables>=3.9.2",
    "dgl>=2.2.1",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "torchdata==0.7.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "Apache-2.0" }

[project.scripts]
import-model = "install:copy_model"

[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "dgl"
url = "https://data.dgl.ai/wheels/repo.html"
type = "find_links"

[tool.pdm.scripts]
_.env = { PYTHONPATH = "./src" }
import-model = { call = "install:copy_model" }
training = { call = "songdo_stgcn_wave.__main__:run" }

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../songdo_metr#egg=songdo-metr",
]
