[project]
name = "songdo_stgcn_wave"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sbyim", email = "ysb06@hotmail.com"},
]
dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "wandb>=0.18.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../songdo_metr#egg=songdo-metr",
]

[tool.pdm.resolution]
respect-source-order = true

[[tool.pdm.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
include_packages = ["torch", "torchvision", "torchaudio"]

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
